@@ -34,7 +34,7 @@ public class JobLogCleanJob implements JobHandler {
     public String execute(String param) {
         Integer count = jobLogService.cleanJobLog(JOB_CLEAN_RETAIN_DAY, DELETE_LIMIT);
         log.info("[execute][定时执行清理定时任务日志数量 ({}) 个]", count);
-        return String.format("定时执行清理定时任务日志数量 %s 个", count);
+        return "定时执行清理定时任务日志数量 %s 个".formatted(count);
     }
 
 }
