@@ -59,7 +59,7 @@ public class LoginLogServiceImplTest extends BaseDbUnitTest {
         // 断言，只查到了一条符合条件的
         assertEquals(1, pageResult.getTotal());
         assertEquals(1, pageResult.getList().size());
-        assertPojoEquals(loginLogDO, pageResult.getList().get(0));
+        assertPojoEquals(loginLogDO, pageResult.getList().getFirst());
     }
 
     @Test
