@@ -465,7 +465,7 @@ public class SocialClientServiceImplTest extends BaseDbUnitTest {
         // 断言
         assertEquals(1, pageResult.getTotal());
         assertEquals(1, pageResult.getList().size());
-        assertPojoEquals(dbSocialClient, pageResult.getList().get(0));
+        assertPojoEquals(dbSocialClient, pageResult.getList().getFirst());
     }
 
 }
